--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "description": "",
   "dependencies": {
     "debug": "^4.4.1",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "morgan": "^1.10.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
