--- a/backend/package.json
+++ b/backend/package.json
@@ -1,19 +1,16 @@
 {
-  "name": "test",
+  "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
-  "type": "module",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node app.mjs",
+    "dev": "nodemon app.mjs"
   },
   "keywords": [],
-  "author": "Maxon",
+  "author": "Max",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "debug": "^4.4.1",
     "express": "^5.1.0",
     "morgan": "^1.10.1"
   },
